fix: bound source corpus and model context identity